# sephr

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  Package.swift  README.md  goal.txt
cal/: CAL.modulemap  CAL.podspec
cal/Sources/: CAL.h  CALDownloads.h  CALDownloads.mm  CALEngineBootstrap.h  CALEngineBootstrap.mm  CALExtensions.h  CALExtensions.mm  CALHistory.h  CALHistory.mm  CALInternal.h  CALMedia.h  CALMedia.mm  CALOmnibox.h  CALOmnibox.mm  CALProfile.h  CALProfile.mm  CALTabStrip.h  CALTabStrip.mm  CALThumbnails.h  CALThumbnails.mm  CALWebView.h  CALWebView.mm
docs/perf/: 2026-06-09-baseline.md
docs/superpowers/plans/: 2026-06-09-performance-overhaul.md  2026-06-11-occlusion-driven-webcontents-visibility.md
docs/superpowers/specs/: 2026-06-09-performance-overhaul-design.md
scripts/: bootstrap.sh  build_all.sh  build_cal.sh  build_sephr.sh  build_sephrium.sh  fetch_ublock_origin.sh  full_rebuild.sh  generate_ios_ublock_rules.py  make_app.sh  make_dmg.sh  make_dmg_background.py  make_icon.py  perf_snapshot.sh  perf_trace_analyze.py  qa_battery.sh  qa_regression.sh  qa_userflow.sh  rebase.sh  rebase_patches.sh  regen_bridge_patch.sh  sync_ungoogled.sh
sephr-ios/: .gitignore  README.md  project.yml
sephr-ios/Resources/: Info.plist
sephr-ios/Sources/App/: RootView.swift  SephrIOSApp.swift
sephr-ios/Sources/Branding/: SephrLogo.swift
sephr-ios/Sources/Browser/: BottomBar.swift  BrowserEngine.swift  BrowserWebView.swift  ContentBlocker.swift  ReaderModeView.swift  WebViewPool.swift
sephr-ios/Sources/DesignSystem/: DCDesign.swift
sephr-ios/Sources/Intelligence/: CitationValidator.swift  InferenceBudget.swift  InferenceWorker.swift  ModelManager.swift  PromptTrimmer.swift  Prompts.swift  TextBudget.swift
sephr-ios/Sources/Onboarding/: OnboardingView.swift
sephr-ios/Sources/Persistence/: FavoritesStore.swift  HistoryStore.swift
sephr-ios/Sources/Search/: SearchOverlayView.swift  URLBuilder.swift
sephr-ios/Sources/Settings/: SettingsView.swift
sephr-ios/Sources/Summarize/: OrigamiFoldAnimator.swift  PinchSummarizeGesture.swift  SummarizeEngine.swift  SummarizeOverlay.swift  SummarizeState.swift
sephr-ios/Sources/SuperBrowse/: DDGSerpParser.swift  HiddenWebViewFleet.swift  ReaderExtractor.swift  SuperBrowseContainer.swift  SuperBrowseEngine.swift  SuperBrowseHeroView.swift  SuperBrowseResultView.swift  SuperBrowseState.swift
sephr-ios/Sources/Tabs/: ArchiveView.swift  SephrTab.swift  TabDeckView.swift  TabSnapshotCache.swift  TabStore.swift
sephr-ios/Tests/SephrTests/: InferenceBudgetTests.swift  PromptTrimmerTests.swift  TextBudgetTests.swift
sephr-ios/scripts/: prompt_trimmer_test_main.swift  resign_leapsdk.sh  run_prompt_trimmer_tests.sh
sephr/Resources/: AppIcon.icns  Info.plist  Sephr.entitlements
sephr/Resources/Assets.xcassets/: Contents.json
sephr/Sources/App/: AppDelegate.swift  ColorExtensions.swift  SephrApp.swift  SephrDefaultBrowser.swift  SephrNotifications.swift  SephrQuitController.swift  SephrUpdater.swift  SephriumEngine.swift
sephr/Sources/Boosts/: SephrBoostManager.swift
sephr/Sources/Branding/: SephrLogo.swift
sephr/Sources/CommandBar/: SephrCommandBar.swift  SephrCommandBarViewModel.swift  SephrSearchResult.swift
sephr/Sources/Easels/: SephrEasel.swift
sephr/Sources/LittleSephr/: LittleSephrWindow.swift
sephr/Sources/Menu/: SephrSpacesMenuController.swift
sephr/Sources/MiniPlayer/: SephrMiniPlayer.swift
sephr/Sources/Notes/: SephrNoteCanvas.swift  SephrNoteModel.swift  SephrNotesEditor.swift
sephr/Sources/Peek/: SephrLinkPeekOverlay.swift  SephrPeekPopover.swift
sephr/Sources/Persistence/: SephrDatabase.swift  SephrFaviconCache.swift  SephrPreferences.swift  SephrSession.swift  SephrSessionStore.swift
sephr/Sources/Privacy/: SephrContentBlocking.swift
sephr/Sources/Search/: SephrSearchEngine.swift
sephr/Sources/Settings/: DCComponents.swift  DCDesign.swift  SephrCharacterPicker.swift  SephrExtensionsPane.swift  SephrSettingsPanes.swift  SephrSettingsView.swift  SephrSettingsWindow.swift
sephr/Sources/Sidebar/: SephrCompactModeController.swift  SephrCreateFolderSheet.swift  SephrCreateSpaceView.swift  SephrDownloadsButton.swift  SephrFavoritesRow.swift  SephrFolderCell.swift  SephrHoverButton.swift  SephrNewTabRow.swift  SephrNowPlayingPill.swift  SephrPageSettingsPanel.swift  SephrSidebarFooter.swift  SephrSidebarMotion.swift  SephrSidebarOverlay.swift  SephrSidebarResizer.swift  SephrSidebarURLField.swift  SephrSidebarView+Collapse.swift  SephrSidebarView.swift  SephrSpaceHeader.swift  SephrSpaceSwitcherFooter.swift  SephrSplitTabCell.swift  SephrSymbolPicker.swift  SephrTabCell.swift  SephrTabPasteboard.swift
sephr_overlay/builtin_extensions/: BUILD.gn  ublock_installer.cc  ublock_installer.h
sephr_overlay/cal_bridge/: BUILD.gn  cal_bridge.h  cal_bridge.mm  cal_downloads_bridge.cc  cal_extensions_bridge.cc  cal_history_bridge.cc  cal_omnibox_bridge.cc  cal_profile_registry.cc  cal_profile_registry.h  cal_tab_window_controller.cc  cal_tab_window_controller.h  sephr_modal_dialog_host.cc  sephr_modal_dialog_host.h  sephr_modal_dialog_manager_delegate.cc  sephr_modal_dialog_manager_delegate.h
sephrium/: PHASE2-PLAN.md  apply_domain_substitution.py  apply_patches.py  apply_patches_atomic.py  build.py  domain_substitution.list  flags.gn  flags_fast.gn  package_framework.py
sephrium/cal_headers/: SephriumPublic.h
sephrium/extensions/: .gitignore
sephrium/patches/sephr/: 002-cal-webcontents-bridge.patch  003-screen-ai-disable-guard.patch  004-mode0-build-graph-fixes.patch  005-prune-test-targets-from-gn-all.patch  012-cal-browser-main-extra-parts.patch  013-disable-keychain-prompt-mac.patch  014-brand-mac-product-names.patch  015-liquid-glass-history-overlay.patch  016-ua-brand-google-chrome.patch  017-builtin-ublock-origin.patch  series
sephrium/patches/sephr/deferred/: 001-battery-tab-suspend.patch  007-remove-remaining-google-domains.patch  008-webrtc-hardening.patch  009-fingerprint-resistance-extra.patch  010-builtin-filter-lists.patch  011-disable-update-checks.patch
(+33 files in other folders)
